--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,7 +1,9 @@
+asciinema==2.0.2
 asgiref==3.7.2
 attrs==19.3.0
 Automat==0.8.0
 backports.zoneinfo==0.2.1
+blinker==1.4
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
@@ -56,6 +58,7 @@ SecretStorage==2.3.1
 service-identity==18.1.0
 simplejson==3.16.0
 six==1.14.0
+sly==0.5
 sos==4.4
 sqlparse==0.4.4
 ssh-import-id==5.10
@@ -67,4 +70,5 @@ ufw==0.36
 unattended-upgrades==0.1
 urllib3==1.25.8
 wadllib==1.3.3
+zipp==1.0.0
 zope.interface==4.7.1
